# llm-transcribe

./: README.md  main.py  pyproject.toml
docs/: architecture.md
src/llm_transcribe/: __init__.py  audio.py  cli.py  models.py  output.py  timestamp_utils.py  transcriber.py
src/transcriber/: __init__.py  cli.py  llm_client.py  models.py  output.py  transcriber.py
tests/: conftest.py  test_audio_chunking.py  test_context_extraction.py  test_output_formatting.py  test_timestamp_handling.py  test_timestamp_utils.py  test_verbatim_context.py
